Bug 200311 - KDecoration regressions: ignores mask, shows no shadows
Summary: KDecoration regressions: ignores mask, shows no shadows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-15 15:26 UTC by Christoph Feck
Modified: 2009-07-15 16:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2009-07-15 15:26:57 UTC
Version:            (using Devel)
Installed from:    Compiled sources

I use deKorator from playground, it is a KDecoration subclass (no unstable classes were used).

Using trunk, I get the following regressions compared to KDE 4.2:
- shadows are not drawn (they work for menus, shadow plugin enabled)
- the mask is ignored, corners are drawn even for rounded themes.

This is with XRender compositing, cannot enable OpenGL on my system.
Comment 1 Christoph Feck 2009-07-15 16:02:41 UTC
SVN commit 997202 by cfeck:

Do not announce abilities that we do not support

BUG: 200311


 M  +37 -0     deKoratorclient.cc  
 M  +1 -1      deKoratorclient.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=997202