Do not announce abilities that we do not support

BUG: 200311

svn path=/trunk/playground/artwork/dekorator/; revision=997202